Responsivity to screen 375px

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
                 
         
-        <footer class="footer"> 
+        <footer> 
             <div class="social-midia">
                 <a href="https://www.linkedin.com/in/tuliocanedo/"><img src="img/logo-linkedin.png"  width= 30px ></a>
                 <a href="https://github.com/tuliocanedo"><img src="img/logo-github.png"  width= 30px ></a>
