New color to the footer background

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="main"> 
             
             <div class="encrypt">
-                <textarea cols="10" id="txt-area1" placeholder="Type your text here..." class="line text-animation"></textarea>
+                <textarea cols="10" id="txt-area1" placeholder="Type your text here..." class="text-animation"></textarea>
         
                 <div class="info">
                     <img src="img/atention.png" width="12px" >
